# dsetkit

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: convert.py
scripts/: clean_pycache.py  clean_pycache.sh  show_dir.py
src/dsetkit/: __init__.py  dataset.py  detection.py  evaluator.py  metrics.py  split.py  tools.py
src/dsetkit/annotations/: convert.py  io.py  registry.py  schema.py
src/dsetkit/annotations/formats/: __init__.py  coco.py  common.py  labelme.py  voc.py  yolo.py
src/dsetkit/augment/: __init__.py  flip.py  rotate.py
src/dsetkit/utils/: file.py  image.py
src/dsetkit/visualize/: plot.py
tests/: demo.py  dset.py  test_dataset_stats.py  test_evaluator_metrics.py  test_flip.py  test_rotate.py  test_split.py
