[project]
name = "dsetkit"
version = "0.4.0"
description = "Deep learning dataset infrastructure toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Jasper Tao"}
]

dependencies = [
    "numpy>=2.0",
    "natsort>=8.0",
    "opencv-python>=4.8",
    "tqdm>=4.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]



