[project]
name = "dsetkit"
version = "0.4.1"
description = "Deep learning dataset infrastructure toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    {name = "Jasper Tao"}
]

dependencies = [
    "numpy>=2.0",
    "natsort>=8.0",
    "opencv-python>=4.8",
    "tqdm>=4.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Jasper-T/dsetkit"
Repository = "https://github.com/Jasper-T/dsetkit"
Issues = "https://github.com/Jasper-T/dsetkit/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]



